--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@sachin.78dev/blog-common": "^1.0.1",
+    "@sachin.78dev/blog-common": "^1.0.6",
     "axios": "^1.7.9",
+    "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
