--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250109.0",
+    "@types/node": "^22.13.10",
     "wrangler": "^3.109.3"
   }
 }
