--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,16 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
-    "@prisma/client": "^6.4.0",
+    "@prisma/client": "^6.5.0",
     "@prisma/extension-accelerate": "^1.2.2",
     "@sachin.78dev/blog-common": "^1.0.1",
-    "hono": "^4.7.2",
-    "prisma": "^6.4.0"
+    "bcryptjs": "^3.0.2",
+    "hono": "^4.7.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250109.0",
     "@types/node": "^22.13.10",
+    "prisma": "^6.5.0",
     "wrangler": "^3.109.3"
   }
 }
